Replacing the Master

--- a/project001/first-news.html
+++ b/project001/first-news.html
@@ -91,55 +91,139 @@
       </div>
     </header><!--End of header-->
 
-    <div class="container-fluid welcome"><!--Start of welcome-->
+    <div class="container-fluid welcomenews"><!--Start of welcome-->
       <div class="container">
         <div class="row">
         <div class="col-sm-12 text-center">
         <img src="images/fox2.png" class="img-circle l1">
         <h1>Hacktiv8 News Portal <br> Comprehensive & Proven</h1>
-        <p>Agustus 2016, Ayo Ngoding!</p>
+        <p>Oleh Ryan Andhaka</p>
         </div>
         </div>
       </div>
     </div><!--End of welcome-->
 
-    <div class="container-fluid about"><!--Start of about-->
+    <div class="container-fluid news"><!--Start of about-->
       <div class="container">
         <div class="row">
-        <div class="col-sm-12 text-left">
-          <div class="panel panel-default abox">
+        <div class="col-sm-12 text-justify">
+          <div class="panel panel-default newsbox">
             <div class="panel-body">
         <h1 class="titleme">Resmi Menjadi Unicorn, Apakah GO-JEK Akan Bergabung dengan “Aliansi Anti Uber”?</h1>
-            <img src="images/newspic-head.jpg" class="img-responsive center-block">
+            <img src="images/newspic-head.jpg" class="img-responsive center-block newspic">
+
             <p>
-              <br>GO-JEK akhirnya resmi mengumumkan pendanaan terbaru mereka yang bernilai US$550 juta (sekitar Rp7,2 triliun).<br>
-              Pendanaan tersebut mereka terima dari KKR, Warburg Pincus, Farallon Capital, dan Capital Group Private Markets.
-              Investor GO-JEK sebelumnya, Sequoia India, Northstar Group, DST Global, NSI Ventures, Rakuten Ventures, dan Formation Group, juga ikut berpartisipasi dalam pendanaan ini.<br><br>
-              Dana segar ini akan digunakan GO-JEK untuk mengembangkan jangkauan dan kualitas dari layanan-layanan mereka. Dalam pernyataan resminya, GO-JEK juga menyebut kemungkinan untuk menghadirkan layanan mereka di luar Indonesia.<br><br>
-              Saat ini, GO-JEK telah mempunyai 200.000 mitra pengemudi sepeda motor dan mobil, serta lebih dari 3.000 penyedia jasa di platform mereka. GO-JEK pun mengklaim kalau mereka menerima lebih dari 20 juta pesanan sepanjang bulan Juni 2016 yang lalu.<br><br>
-              <h2 class="titleme">Hubungan GO-JEK dengan aliansi anti Uber</h2><br></p>
-              <img src="images/newspic-head2.jpg" class="img-responsive center-block">
-              <p>
-              <br>Dengan valuasi sebesar US$66 miliar (sekitar Rp867 triliun), Uber jelas merupakan penguasa bisnis transportasi on demand di dunia. Hal ini kemudian memicu munculnya sebuah aliansi anti Uber yang digagas oleh para penyedia layanan transportasi online lainnya, yaitu Didi Chuxing, Ola, Grab, dan Lyft.<br><br>
-              Dengan pendanaan besar yang menjadikan mereka sebagai Unicorn pertama dari Indonesia ini, GO-JEK jelas bisa memainkan peran penting dalam perseteruan para penyedia layanan transportasi online tersebut. Mengingat pertarungan yang sengit antara GO-JEK dan Uber di tanah air, tak mustahil kalau kemudian GO-JEK akan bergabung dengan aliansi anti Uber.<br><br>
-              GO-JEK sendiri punya kedekatan dengan aliansi tersebut. Sequoia India dan DST Global, dua investor GO-JEK, juga merupakan investor di Ola. DST Global pun punya saham di Didi Chuxing, sang pemimpin dari aliansi anti Uber. Setelah mendapatkan investasi terbaru, GO-JEK pun makin dekat dengan aliansi anti Uber. Farallon Capital, investor terbaru mereka, juga merupakan investor di Didi Chuxing.<br><br>
-              Kamu bisa melihat peta investor layanan transportasi on-demand dunia pada ilustrasi berikut:<br><br></p>
+              GO-JEK akhirnya resmi mengumumkan pendanaan terbaru mereka yang
+              bernilai US$550 juta (sekitar Rp7,2 triliun). Pendanaan tersebut
+              mereka terima dari KKR, Warburg Pincus, Farallon Capital, dan
+              Capital Group Private Markets. Investor GO-JEK sebelumnya, Sequoia
+              India, Northstar Group, DST Global, NSI Ventures, Rakuten Ventures,
+              dan Formation Group, juga ikut berpartisipasi dalam pendanaan ini.
+            </p>
 
-              <img src="images/newspic-head3.jpg" class="img-responsive center-block">
+            <p>
+              Dana segar ini akan digunakan GO-JEK untuk mengembangkan jangkauan
+              dan kualitas dari layanan-layanan mereka. Dalam pernyataan resminya,
+              GO-JEK juga menyebut kemungkinan untuk menghadirkan layanan mereka di luar Indonesia.
+            </p>
+
+            <p>
+              Saat ini, GO-JEK telah mempunyai 200.000 mitra pengemudi sepeda
+              motor dan mobil, serta lebih dari 3.000 penyedia jasa di platform
+              mereka. GO-JEK pun mengklaim kalau mereka menerima lebih dari 20
+              juta pesanan sepanjang bulan Juni 2016 yang lalu.
+            </p>
+
+              <h2 class="titleme">Hubungan GO-JEK dengan aliansi anti Uber</h2></p>
+              <img src="images/newspic-head2.jpg" class="img-responsive center-block newspic">
+
+            <p>
+              Dengan valuasi sebesar US$66 miliar (sekitar Rp867 triliun),
+              Uber jelas merupakan penguasa bisnis transportasi on demand di
+              dunia. Hal ini kemudian memicu munculnya sebuah aliansi anti Uber
+              yang digagas oleh para penyedia layanan transportasi online
+              lainnya, yaitu Didi Chuxing, Ola, Grab, dan Lyft.
+            </p>
+
+            <p>
+              Dengan pendanaan besar yang menjadikan mereka sebagai Unicorn
+              pertama dari Indonesia ini, GO-JEK jelas bisa memainkan peran
+              penting dalam perseteruan para penyedia layanan transportasi
+              online tersebut. Mengingat pertarungan yang sengit antara GO-JEK
+              dan Uber di tanah air, tak mustahil kalau kemudian GO-JEK akan
+              bergabung dengan aliansi anti Uber.
+            </p>
+
+            <p>
+              GO-JEK sendiri punya kedekatan dengan aliansi tersebut. Sequoia
+              India dan DST Global, dua investor GO-JEK, juga merupakan investor
+              di Ola. DST Global pun punya saham di Didi Chuxing, sang pemimpin
+              dari aliansi anti Uber. Setelah mendapatkan investasi terbaru,
+              GO-JEK pun makin dekat dengan aliansi anti Uber. Farallon Capital,
+              investor terbaru mereka, juga merupakan investor di Didi Chuxing.
+            </p>
+
+            <p>
+              Kamu bisa melihat peta investor layanan transportasi on-demand dunia pada ilustrasi berikut:
+            </p>
+
+              <img src="images/newspic-head3.jpg" class="img-responsive center-block newspic">
 
               <p>
-                <br>Apa ini artinya GO-JEK akan segera bergabung dengan aliansi anti Uber? Sepertinya tidak.<br><br>
-                Keberadaan Grab di aliansi anti Uber merupakan alasan utama mengapa kecil kemungkinan GO-JEK akan bergabung dengan aliansi tersebut. Selain bersaing dalam bisnis, Nadiem Makarim juga punya konflik personal dengan Anthony Tan, CEO Grab. Mereka bahkan tidak saling berbicara satu sama lain.<br><br>
-                Seperti ingin menguatkan dukungan ke sekutunya, Didi Chuxing baru-baru ini pun memberikan dana segar sebesar US$600 juta untuk Grab. Investasi ini tentu menempatkan Didi Chuxing dan aliansi anti Uber sebagai “musuh” dari GO-JEK.<br>
+                Apa ini artinya GO-JEK akan segera bergabung dengan aliansi anti Uber? Sepertinya tidak.
               </p>
 
-                <h2 class="titleme">Strategi berbeda yang diterapkan GO-JEK</h2><br>
-                <p>Hal lain yang menjadi alasan mengapa kecil kemungkinan kalau GO-JEK akan bergabung dengan aliansi anti Uber adalah perbedaan strategi mereka dengan para anggota aliansi tersebut. Ketika semua anggota aliansi anti Uber fokus mengembangkan layanan transportasi mobil, GO-JEK justru terlambat meluncurkan layanan berbasis mobil.<br><br>
-                Berawal dari menyediakan transportasi on demand dengan sepeda motor, GO-JEK justru mengembangkan bisnis mereka dengan menghadirkan layanan kurir dan pengantaran makanan. Mereka kemudian melanjutkannya dengan menyediakan layanan jasa seperti pembersih rumah dan pijat, hingga ke penjualan tiket bioskop.<br><br>
-                Khusus untuk GO-FOOD, GO-JEK bahkan mengklaim kalau layanan pemesanan makanan tersebut merupakan yang terbesar kedua di dunia, setelah sebuah layanan serupa di Cina. Sejak diluncurkan, GO-FOOD telah melayani 15 juta pemesanan makanan, dengan total 35.000 restoran rekanan.<br><br>
-                Perbedaan strategi ini mungkin menjadi alasan utama mengapa GO-JEK kemudian memilih KKR dan Warburg Pincus sebagai investor baru mereka. Kedua investor tersebut tidak punya kepentingan di perang layanan transportasi yang terjadi antara Uber dan aliansi anti Uber.<br><br>
-                Hal ini jelas bisa memberikan kebebasan bagi GO-JEK untuk fokus dengan semua layanan yang mereka miliki saat ini, sehingga mereka tidak perlu ikut campur dengan pertarungan antara Uber dan aliasi penantangnya. Namun sekali lagi, tidak ada hal yang mustahil dalam bisnis.<br><br></p>
+              <p>
+                Keberadaan Grab di aliansi anti Uber merupakan alasan utama mengapa kecil kemungkinan GO-JEK akan bergabung dengan aliansi tersebut. Selain bersaing dalam bisnis, Nadiem Makarim juga punya konflik personal dengan Anthony Tan, CEO Grab. Mereka bahkan tidak saling berbicara satu sama lain.
+              </p>
 
+              <p>
+                Seperti ingin menguatkan dukungan ke sekutunya, Didi Chuxing baru-baru ini pun memberikan dana segar sebesar US$600 juta untuk Grab. Investasi ini tentu menempatkan Didi Chuxing dan aliansi anti Uber sebagai “musuh” dari GO-JEK.
+              </p>
+
+                <h2 class="titleme">Strategi berbeda yang diterapkan GO-JEK</h2>
+                <img src="images/gojek.jpg" class="img-responsive center-block newspic">
+                <p>
+                  Hal lain yang menjadi alasan mengapa kecil kemungkinan kalau
+                  GO-JEK akan bergabung dengan aliansi anti Uber adalah perbedaan
+                  strategi mereka dengan para anggota aliansi tersebut. Ketika
+                  semua anggota aliansi anti Uber fokus mengembangkan layanan
+                  transportasi mobil, GO-JEK justru terlambat meluncurkan layanan
+                  berbasis mobil.
+                </p>
+
+                <p>
+                Berawal dari menyediakan transportasi on demand dengan sepeda
+                motor, GO-JEK justru mengembangkan bisnis mereka dengan
+                menghadirkan layanan kurir dan pengantaran makanan. Mereka
+                kemudian melanjutkannya dengan menyediakan layanan jasa seperti
+                pembersih rumah dan pijat, hingga ke penjualan tiket bioskop.
+              </p>
+
+              <p>
+                Khusus untuk GO-FOOD, GO-JEK bahkan mengklaim kalau layanan
+                pemesanan makanan tersebut merupakan yang terbesar kedua di dunia,
+                setelah sebuah layanan serupa di Cina. Sejak diluncurkan, GO-FOOD
+                telah melayani 15 juta pemesanan makanan, dengan total 35.000
+                restoran rekanan.
+              </p>
+
+              <p>
+                Perbedaan strategi ini mungkin menjadi alasan utama mengapa GO-JEK
+                kemudian memilih KKR dan Warburg Pincus sebagai investor baru mereka.
+                Kedua investor tersebut tidak punya kepentingan di perang layanan
+                transportasi yang terjadi antara Uber dan aliansi anti Uber.
+              </p>
+
+              <p>
+                Hal ini jelas bisa memberikan kebebasan bagi GO-JEK untuk fokus
+                dengan semua layanan yang mereka miliki saat ini, sehingga mereka
+                tidak perlu ikut campur dengan pertarungan antara Uber dan aliasi
+                penantangnya. Namun sekali lagi, tidak ada hal yang
+                mustahil dalam bisnis.
+              </p>
+              
+                <p>Sumber: <a href="https://id.techinasia.com/bagaimana-posisi-go-jek-setelah-menjadi-unicorn">Techinasia</a></p>
           </div>
         </div>
       </div>
