--- a/project001/index.html
+++ b/project001/index.html
@@ -465,7 +465,7 @@
   <div class="form-group">
     <label class="col-md-4 control-label" for="textinput">E-Mail</label>
     <div class="col-md-4">
-    <input id="textinput" name="textinput" type="text" placeholder="E-Mail anda" class="form-control input-md" required="">
+    <input id="textinput" name="textinput" type="text" placeholder="nama@domainanda.com" class="form-control input-md" required="">
 
     </div>
   </div>
@@ -519,6 +519,14 @@
       Writting
     </label>
 	</div>
+  </div>
+</div>
+
+<!-- Textarea -->
+<div class="form-group">
+  <label class="col-md-4 control-label" for="textarea">Pesan</label>
+  <div class="col-md-4">
+    <textarea class="form-control" id="textarea" name="textarea">Isilah pesan anda disini</textarea>
   </div>
 </div>
 
