Modify Link, Final

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Ryan Andhaka</title>
 
     <!-- CSS-->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="project001/css/bootstrap.min.css" rel="stylesheet">
     <link href="project001/css/index.css" rel="stylesheet">
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
