--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="project001/js/bootstrap.min.js"></script>
     <script>
       $(document).ready(function(){
         $('.dropdown-submenu a.test').on("click", function(e){
