found the broken link
this maybe the final file

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                   <li><a href="index.html">Home</a></li>
                   <!-- <li><a href="#">About Me</a></li> -->
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Phase-0 Activities<span class="caret"></span></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Phase-0 Activities<span class="caret"></span></a>
                     <ul class="dropdown-menu">
 
                       <li class="dropdown-submenu">
-                      <a class="test" tabindex="-1" href="#">Week-1 <span>&raquo;</span></a>
+                      <a class="test" tabindex="-1">Week-1 <span>&raquo;</span></a>
                       <ul class="dropdown-menu">
                         <li><a tabindex="-1" href="project001/first-news.html">News</a></li>
                           <li class="divider"></li>
