--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav pull-right">
                   <li><a href="index.html">Home</a></li>
                   <!-- <li><a href="#">About Me</a></li> -->
                   <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Phase-0 Activities<span class="caret"></span></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown">Phase-0 Activities<span class="caret"></span></a>
                     <ul class="dropdown-menu">
 
                       <li class="dropdown-submenu">
