--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reflections<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                          <li><a href="reflection.html">Week-1</a></li>
+                          <li><a href="project001/reflection.html">Week-1</a></li>
                         </li>
                       </ul>
                     </li>
