Fill the missing link
It's final for outer index.html

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="panel-body">
               <img src="project001/images/ronald.jpg" class="img-circle pp">
               <h3>Ronald Ishak</h3>
-              <p><a href="https://www.linkedin.com/in/ronishak"><img src="images/linkedin.png" class="img-center linkedin"></a></p>
+              <p><a href="https://www.linkedin.com/in/ronishak"><img src="project001/images/linkedin.png" class="img-center linkedin"></a></p>
               <p>Mengarahkan kamu untuk memulai semangat membuat kreasi untuk dunia sekitar.
                 Berpengalaman lebih dari 10 tahun di industri IT. Sebelumnya menjabat sebagai
                 CTO di Gift Card Indonesia dan membuat Domikado.</p>
@@ -204,7 +204,7 @@
             <div class="panel-body">
               <img src="project001/images/riza.jpg" class="img-circle pp">
               <h3>Riza Fahmi</h3>
-              <p><a href="https://id.linkedin.com/in/rizafahmi"><img src="images/linkedin.png" class="img-center linkedin"></a></p>
+              <p><a href="https://id.linkedin.com/in/rizafahmi"><img src="project001/images/linkedin.png" class="img-center linkedin"></a></p>
               <p>Dukungan dan bimbingannya dijamin menjadikan kamu developer yang kaya akan ilmu dan siap kerja.
                 Berpengalaman lebih dari 10 tahun juga dalam industri IT dan Web. Sempat Sebelumnya menjabat sebagai
                 CTO di CitizenLab.</p>
@@ -216,7 +216,7 @@
             <div class="panel-body">
               <img src="project001/images/rubi.jpg" class="img-circle pp">
               <h3>Rubi Henjaya</h3>
-              <p><a href="https://www.linkedin.com/in/rubihenjaya"><img src="images/linkedin.png" class="img-center linkedin"></a></p>
+              <p><a href="https://www.linkedin.com/in/rubihenjaya"><img src="project001/images/linkedin.png" class="img-center linkedin"></a></p>
               <p>Siap mentransformasi kamu menjadi developer yang disiplin dan berstandar internasional.
                 Berpengalaman lebih dari 4 tahun di perusahaan lokal dan 2 tahun di perusahaan Eropa.<br><br><br></p>
             </div>
@@ -227,7 +227,7 @@
             <div class="panel-body">
               <img src="project001/images/haidar.jpg" class="img-circle pp">
               <h3>Haidar Hanif</h3>
-              <p><a href="https://id.linkedin.com/in/mhaidarhanif/"><img src="images/linkedin.png" class="img-center linkedin"></a></p>
+              <p><a href="https://id.linkedin.com/in/mhaidarhanif/"><img src="project001/images/linkedin.png" class="img-center linkedin"></a></p>
               <p>Dengan antusias membantu kamu untuk berkembang dan mengoptimalkan potensimu di tempat yang tepat.
                 Sebelumnya adalah seorang technologist, developer, dan trainer.<br><br><br></p>
             </div>
@@ -414,8 +414,8 @@
                 </tr>
                 <tr>
                   <td>Tevinstein Amos</td>
-                    <td><a href="#"><img src="project001/images/github.png" class="img-center igh"></a></td>
-                    <td><a href="#" class="gitlink">TBA</a></td>
+                    <td><a href="https://github.com/tevinstein"><img src="project001/images/github.png" class="img-center igh"></a></td>
+                    <td><a href="https://tevinstein.github.io" class="gitlink">tevinstein.github.io</a></td>
                 </tr>
                 <tr>
                   <td>Toni Chen</td>
