retouch of color pages
fix color issue

--- a/project001/2016-08-06_hacktiv8-experience-week-1.html
+++ b/project001/2016-08-06_hacktiv8-experience-week-1.html
@@ -91,7 +91,7 @@
       </div>
     </header><!--End of header-->
 
-    <div class="container-fluid welcomenews"><!--Start of welcome-->
+    <div class="container-fluid welcomeblog"><!--Start of welcome-->
       <div class="container">
         <div class="row">
         <div class="col-sm-12 text-center">
@@ -103,11 +103,11 @@
       </div>
     </div><!--End of welcome-->
 
-    <div class="container-fluid news"><!--Start of about-->
+    <div class="container-fluid blog"><!--Start of about-->
       <div class="container">
         <div class="row">
         <div class="col-sm-12 text-justify">
-          <div class="panel panel-default newsbox">
+          <div class="panel panel-default blogbox">
             <div class="panel-body">
         <h1 class="titleme">Apa itu Git</h1>
             <img src="images/git.png" class="img-responsive center-block newspic">
