--- a/project001/website-evaluation.html
+++ b/project001/website-evaluation.html
@@ -91,7 +91,7 @@
       </div>
     </header><!--End of header-->
 
-    <div class="container-fluid welcomewebdev"><!--Start of welcome-->
+    <div class="container-fluid welcomewebeval"><!--Start of welcome-->
       <div class="container">
         <div class="row">
         <div class="col-sm-12 text-center">
@@ -103,11 +103,11 @@
       </div>
     </div><!--End of welcome-->
 
-    <div class="container-fluid webdev"><!--Start of about-->
+    <div class="container-fluid webeval"><!--Start of about-->
       <div class="container">
         <div class="row">
         <div class="col-sm-12 text-justify">
-          <div class="panel panel-default webdevbox">
+          <div class="panel panel-default webevalbox">
             <div class="panel-body">
 
             <h1 class="titleme">Pilihlah dan identifikasi beberapa website
@@ -146,7 +146,7 @@
                 Untuk hypebeast.com menyuguhkan berita seputar art, design, creative,
                 music, fashion, movie dan berbagai entertainment lainnya dengan
                 tampilan sederhana yang sedap dibaca jika berlama-lama. Hypbeast.com
-                mengurasikan berbagai laman dan berita kedalam satu laman yang terus
+                mengkurasikan berbagai laman dan berita kedalam satu laman yang terus
                 di-update secara cepat dan rapi sehingga tidak perlu berseluncur ke website
                 lain.
             </p>
