--- a/project001/reflection.html
+++ b/project001/reflection.html
@@ -91,7 +91,7 @@
       </div>
     </header><!--End of header-->
 
-    <div class="container-fluid welcomewebdev"><!--Start of welcome-->
+    <div class="container-fluid welcomereflect"><!--Start of welcome-->
       <div class="container">
         <div class="row">
         <div class="col-sm-12 text-center">
@@ -103,11 +103,11 @@
       </div>
     </div><!--End of welcome-->
 
-    <div class="container-fluid webdev"><!--Start of about-->
+    <div class="container-fluid reflect"><!--Start of about-->
       <div class="container">
         <div class="row">
         <div class="col-sm-12 text-justify">
-          <div class="panel panel-default webdevbox">
+          <div class="panel panel-default reflectbox">
             <div class="panel-body">
 
             <h1 class="titleme">Materi, konsep, kegiatan, dan bagian apa saja
