--- a/project001/2016-08-06_hacktiv8-experience-week-1.html
+++ b/project001/2016-08-06_hacktiv8-experience-week-1.html
@@ -128,7 +128,7 @@
             <div class="col-sm-12 text-center title">
               <h2>Langsung saja ditonton video tutorialnya, biar lebih ngerti <i class="em em-smile"></i></h2>
             </div>
-            <div class="container hidden-xs review1">
+            <div class="container review1">
               <div class="row review1">
                 <div class="col-sm-2">
                 </div>
