found missing link
missing link

--- a/project001/index.html
+++ b/project001/index.html
@@ -414,8 +414,8 @@
                 </tr>
                 <tr>
                   <td>Tevinstein Amos</td>
-                    <td><a href="#"><img src="images/github.png" class="img-center igh"></a></td>
-                    <td><a href="#" class="gitlink">TBA</a></td>
+                    <td><a href="https://github.com/tevinstein"><img src="images/github.png" class="img-center igh"></a></td>
+                    <td><a href="https://tevinstein.github.io" class="gitlink">tevinstein.github.io</a></td>
                 </tr>
                 <tr>
                   <td>Toni Chen</td>
